-Trabajo con estilos en parrafos y links Redes Sociales.

--- a/index.html
+++ b/index.html
@@ -78,43 +78,43 @@
         <div class="galeriaHome">
             <div class="estiloCajas3">
                 <img src="./img/stuff_021a_WEBfinal.jpg" alt="bandejas marmol" class="img_galeriaHome">
-                <p>>MARBLE CUTTING BOARD</p>
+                <p><span class="marcadorRed">>MARBLE CUTTING BOARD</span></p>
             </div>
             <div class="estiloCajas3">
                 <img src="./img/stuff_010_WEBfinal.jpg" alt="cuchillo blanco" class="img_galeriaHome">
-                <p>>CERAMIC PARING KNIFE</p>
+                <p><span class="marcadorRed">>CERAMIC PARING KNIFE</span></p>
             </div>
             <div class="estiloCajas3">
                 <img src="./img/stuff_006_WEBfinal.jpg" alt="vaso" class="img_galeriaHome">
-                <p>>GLASS MUG</p>
+                <p><span class="marcadorViolet">>GLASS MUG</span></p>
             </div>
             <div class="estiloCajas3">
                 <img src="./img/stuff_030_WEBfinal.jpg" alt="platos" class="img_galeriaHome">
-                <p>>ENAMEL SERVING SET</p>
+                <p><span class="marcadorViolet">>ENAMEL SERVING SET</span></p>
             </div>
             <div class="estiloCajas3">
                 <img src="./img/stuff_002a_WEBfinal.jpg" alt="libretas rojas" class="img_galeriaHome">
-                <p>>ACCOUNT BOOK</p>
+                <p><span class="marcadorViolet">>ACCOUNT BOOK</span></p>
             </div>
             <div class="estiloCajas3">
                 <img src="./img/stuff_029a_WEBfinal.jpg" alt="bandeja lata" class="img_galeriaHome">
-                <p>>STEEL STAR TRAY</p>
+                <p><span class="marcadorViolet">>STEEL STAR TRAY</span></p>
             </div>
             <div class="estiloCajas3">
                 <img src="./img/stuff_022a_WEBfinal.jpg" alt="candados" class="img_galeriaHome">
-                <p>>PADLOCK</p>
+                <p><span class="marcadorViolet">>PADLOCK</span></p>
             </div>
             <div class="estiloCajas3">
                 <img src="./img/stuff_031_WEBfinal.jpg" alt="lapiceras-llaves" class="img_galeriaHome">
-                <p>>KEY SHAPED PEN</p>
+                <p><span class="marcadorViolet">>KEY SHAPED PEN</span></p>
             </div>
             <div class="estiloCajas3">
                 <img src="./img/stuff_032_WEBfinal.jpg" alt="lupas" class="img_galeriaHome">
-                <p>>MAGNIFYING GLASS</p>
+                <p><span class="marcadorViolet">>MAGNIFYING GLASS</span></p>
             </div>
             <div class="estiloCajas3">
                 <img src="./img/stuff_003_WEBfinal.jpg" alt="portaretrato" class="img_galeriaHome">
-                <p>>ACRYLIC FRAMEKK</p>
+                <p><span class="marcadorViolet">>ACRYLIC FRAME</span></p>
             </div>
         </div>
     </main>
@@ -122,8 +122,8 @@
     <footer id="footer">
         &copy; 2022 GREAT STUFF INDUSTRIES - All rights reserved.
         <div>
-            <i class="bi bi-instagram"></i>
-            <i class="bi bi-youtube"></i>
+            <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.youtube.com/"><i class="bi bi-youtube"></i></a>
         </div>
     </footer>
 
