--- a/pages/object_keepers.html
+++ b/pages/object_keepers.html
@@ -79,32 +79,32 @@
             <div class="estiloCajas">
                 <img src="../img/stuff_021a_WEBfinal.jpg" alt="bandejas marmol" class="img_galeriaOk">
                 <p>>MARBLE CUTTING BOARD - ¥3,300</p>
-                <a href="#" class="btn-red">Buy!</a>
+                <a href="./object_keepers.html" class="btn-red">Buy!</a>
             </div>
             <div class="estiloCajas">
                 <img src="../img/stuff_021b_WEBfinal.jpg" alt="bandejas marmol" class="img_galeriaOk">
                 <p>>MARBLE CUTTING BOARD - ¥3,300</p>
-                <a href="#" class="btn-red">Buy!</a>
+                <a href="./object_keepers.html" class="btn-red">Buy!</a>
             </div>
             <div class="estiloCajas">
                 <img src="../img/stuff_010_WEBfinal.jpg" alt="cuchillo blanco" class="img_galeriaOk">
                 <p>>CERAMIC PARING KNIFE w - ¥3,850</p>
-                <a href="#" class="btn-red">Buy!</a>
+                <a href="./object_keepers.html" class="btn-red">Buy!</a>
             </div>
             <div class="estiloCajas">
                 <img src="../img/stuff_009_WEBfinal.jpg" alt="cuchillo negro" class="img_galeriaOk">
                 <p>>CERAMIC PARING KNIFE b - ¥3,850</p>
-                <a href="#" class="btn-red">Buy!</a>
+                <a href="./object_keepers.html" class="btn-red">Buy!</a>
             </div>
             <div class="estiloCajas">
                 <img src="../img/stuff_012_WEBfinal.jpg" alt="bandeja ceramica" class="img_galeriaOk">
                 <p>>DECORATION TRAY - ¥880</p>
-                <a href="#" class="btn-red">Buy!</a>
+                <a href="./object_keepers.html" class="btn-red">Buy!</a>
             </div>
             <div class="estiloCajas">
                 <img src="../img/stuff_013_WEBfinal.jpg" alt="bandeja ceramica" class="img_galeriaOk">
                 <p>>DECORATION TRAY - ¥880</p>
-                <a href="#" class="btn-red">Buy!</a>
+                <a href="./object_keepers.html" class="btn-red">Buy!</a>
             </div>
         </div>
     </section>
@@ -112,8 +112,8 @@
     <footer id="footer">
         &copy; 2022 GREAT STUFF INDUSTRIES - All rights reserved.
         <div>
-            <i class="bi bi-instagram"></i>
-            <i class="bi bi-youtube"></i>
+            <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.youtube.com/"><i class="bi bi-youtube"></i></a>
         </div>
     </footer>
 
