--- a/pages/shop_info.html
+++ b/pages/shop_info.html
@@ -104,10 +104,11 @@
             <div>
                 <p class="datos">
                     Design by GREAT STUFF Ind. <br>
-                    IG xxxxxxxxx <br>
-                    office@greatstuff.com <br>
-                    Mexico 671, Bs.As., ARG. <br>
-                    http://www.greatstuff.com
+                    <a href="https://www.instagram.com/" class="linkRedes">instagram.com/greatstuffind</a> <br>
+                    <a href="https://www.youtube.com/" class="linkRedes">youtube.com/greatstuffind</a> <br>
+                    <a href="./shop_info.html" class="linkRedes">office@greatstuff.com</a> <br>
+                    Mexico 671, Bs.As., ARG. <br> 
+                    <a href="../index.html" class="linkRedes">http://www.greatstuff.com</a> <br>
                 </p>
             </div>
         </div>
@@ -116,8 +117,8 @@
     <footer id="footer">
         &copy; 2022 GREAT STUFF INDUSTRIES - All rights reserved.
         <div>
-            <i class="bi bi-instagram"></i>
-            <i class="bi bi-youtube"></i>
+            <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.youtube.com/"><i class="bi bi-youtube"></i></a>
         </div>
     </footer>
 
