--- a/pages/us.html
+++ b/pages/us.html
@@ -86,8 +86,8 @@
     <footer id="footer">
         &copy; 2022 GREAT STUFF INDUSTRIES - All rights reserved.
         <div>
-            <i class="bi bi-instagram"></i>
-            <i class="bi bi-youtube"></i>
+            <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.youtube.com/"><i class="bi bi-youtube"></i></a>
         </div>
     </footer>
 
