--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -78,72 +78,72 @@
             <div class="estiloCajas2">
                 <img src="../img/stuff_006_WEBfinal.jpg" alt="vaso" class="img_galeriaCatalog">
                 <p>>BOROSILICATE GLASS MUG - ¥1,100</p>
-                <a href="#" class="btn-violet">Buy!</a>
+                <a href="./catalog.html" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_005_WEBfinal.jpg" alt="vaso" class="img_galeriaCatalog">
                 <p>>BOROSILICATE GLASS MUG - ¥1,100</p>
-                <a href="#" class="btn-violet">Buy!</a>
+                <a href="./catalog.html" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_007_WEBfinal.jpg" alt="bandeja cobre" class="img_galeriaCatalog">
                 <p>>BRASS RECTANGLE TRAY - ¥7,480</p>
-                <a href="#" class="btn-violet">Buy!</a>
+                <a href="./catalog.html" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_027_WEBfinal.jpg" alt="bandeja vidrio" class="img_galeriaCatalog">
                 <p>>STAINED GLASS TRAY - ¥3,520</p>
-                <a href="#" class="btn-violet">Buy!</a>
+                <a href="./catalog.html" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_008_WEBfinal.jpg" alt="lapiceras" class="img_galeriaCatalog">
                 <p>>BULK PACK BALLPOINT PENS - ¥880</p>
-                <a href="#" class="btn-violet">Buy!</a>
+                <a href="./catalog.html" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_002a_WEBfinal.jpg" alt="libretas rojas" class="img_galeriaCatalog">
-                <p>>ACCOUNT BOOK - ¥1,650</p>
-                <a href="#" class="btn-violet">Buy!</a>
+                <p>>ACCOUNT BOOK - Red only - ¥1,650</p>
+                <a href="./catalog.html" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_016_WEBfinal.jpg" alt="caja de cobre" class="img_galeriaCatalog">
                 <p>>JAPANESE MOSQUITO COIL HOLDER - ¥4,400</p>
-                <a href="#" class="btn-violet">Buy!</a>
+                <a href="./catalog.html" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_003_WEBfinal.jpg" alt="portaretrato" class="img_galeriaCatalog">
                 <p>>ACRYLIC FRAME / 10.5 x 14 - ¥2,420</p>
-                <a href="#" class="btn-violet">Buy!</a>
+                <a href="./catalog.html" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_029a_WEBfinal.jpg" alt="bandeja lata" class="img_galeriaCatalog">
                 <p>>STEEL STAR TRAY - ¥1,320</p>
-                <a href="#" class="btn-violet">Buy!</a>
+                <a href="./catalog.html" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_022b_WEBfinal.jpg" alt="candados" class="img_galeriaCatalog">
-                <p>>PADLOCK - ¥550</p>
-                <a href="#" class="btn-violet">Buy!</a>
+                <p>>PADLOCK - each - ¥550</p>
+                <a href="./catalog.html" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_030_WEBfinal.jpg" alt="platos" class="img_galeriaCatalog">
                 <p>>ENAMEL SERVING SET - ¥5,280</p>
-                <a href="#" class="btn-violet">Buy!</a>
+                <a href="./catalog.html" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_011b_WEBfinal.jpg" alt="tablas madera" class="img_galeriaCatalog">
-                <p>>CUTTING BOARD - ¥3,300</p>
-                <a href="#" class="btn-violet">Buy!</a>
+                <p>>CUTTING BOARD - each - ¥3,300</p>
+                <a href="./catalog.html" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_032_WEBfinal.jpg" alt="lupas" class="img_galeriaCatalog">
-                <p>>MAGNIFYING GLASS - ¥2,200</p>
-                <a href="#" class="btn-violet">Buy!</a>
+                <p>>MAGNIFYING GLASS - each - ¥2,200</p>
+                <a href="./catalog.html" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_031_WEBfinal.jpg" alt="lapiceras-llaves" class="img_galeriaCatalog">
-                <p>>KEY SHAPED PEN - ¥1,980</p>
-                <a href="#" class="btn-violet">Buy!</a>
+                <p>>KEY SHAPED PEN - each - ¥1,980</p>
+                <a href="./catalog.html" class="btn-violet">Buy!</a>
             </div>
         </div>
     </section>
@@ -151,8 +151,8 @@
     <footer id="footer">
         &copy; 2022 GREAT STUFF INDUSTRIES - All rights reserved.
         <div>
-            <i class="bi bi-instagram"></i>
-            <i class="bi bi-youtube"></i>
+            <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.youtube.com/"><i class="bi bi-youtube"></i></a>
         </div>
     </footer>
 
