-Trabajo links botones.

--- a/pages/object_keepers.html
+++ b/pages/object_keepers.html
@@ -31,13 +31,13 @@
                         <li class="cbHeader"><a href="./catalog.html">Catalog   <span class="color3header">>>></span></a></li>
                         <li class="cbHeader"><a href="./us.html">Us   <span class="color4header">>>></span></a></li>
                         <li class="cbHeader"><a href="./shop_info.html">Shop Information   <span class="color5header">>>></span></a></li>
-                        <li class="cbHeader"><a href="">cart (0) <i class="bi bi-bag text-white"></i></a></li>
+                        <li class="cbHeader"><a href="./object_keepers.html">cart (0) <i class="bi bi-bag text-white"></i></a></li>
                     </ul>
                     <form class="d-flex formHeader">
                         <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
                         <button class="btn btn-outline-dark" type="submit"><i class="bi bi-search"></i></button>
                     </form>
-                    <i class="bi bi-bag btn btn-outline-dark bagHeader"></i>
+                    <a href="./object_keepers.html"><i class="bi bi-bag btn btn-outline-dark bagHeader"></i></a>
                 </div>
             </div>
         </nav>
