--- a/pages/shop_info.html
+++ b/pages/shop_info.html
@@ -32,13 +32,13 @@
                         <li class="cbHeader"><a href="./catalog.html">Catalog   <span class="color3header">>>></span></a></li>
                         <li class="cbHeader"><a href="./us.html">Us   <span class="color4header">>>></span></a></li>
                         <li class="cbHeader"><a href="./shop_info.html">Shop Information   <span class="color5header">>>></span></a></li>
-                        <li class="cbHeader"><a href="">cart (0) <i class="bi bi-bag text-white"></i></a></li>
+                        <li class="cbHeader"><a href="./shop_info.html">cart (0) <i class="bi bi-bag text-white"></i></a></li>
                     </ul>
                     <form class="d-flex formHeader">
                         <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
                         <button class="btn btn-outline-dark" type="submit"><i class="bi bi-search"></i></button>
                     </form>
-                    <i class="bi bi-bag btn btn-outline-dark bagHeader"></i>
+                    <a href="./shop_info.html"><i class="bi bi-bag btn btn-outline-dark bagHeader"></i></a>
                 </div>
             </div>
         </nav>
@@ -108,7 +108,7 @@
                     <a href="https://www.youtube.com/" class="linkRedes">youtube.com/greatstuffind</a> <br>
                     <a href="./shop_info.html" class="linkRedes">office@greatstuff.com</a> <br>
                     Mexico 671, Bs.As., ARG. <br> 
-                    <a href="../index.html" class="linkRedes">http://www.greatstuff.com</a> <br>
+                    <a href="../index.html" class="linkRedes">https://www.greatstuff.com</a> <br>
                 </p>
             </div>
         </div>
