--- a/pages/shop_info.html
+++ b/pages/shop_info.html
@@ -84,6 +84,9 @@
                     <label for="exampleFormControlTextarea1" class="form-label">Text</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
                 </div>
+                <div>
+                    <input type="submit" value="Send" class="btn-orange">
+                </div>
             </div>
         </div>
         
